# brust

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: publish-binaries.yml
src/: imgflip.rs  main.rs  utils.rs
src/commands/: an.rs  big.rs  blague.rs  choose.rs  mock.rs  mod.rs  ntm.rs  numbat.rs  poll.rs  react.rs  roasted.rs  roll.rs  tg.rs  uwu.rs
src/commands/cute/: cat.rs  dog.rs  fox.rs  frog.rs  mod.rs  spood.rs
src/commands/lang/: c.rs  cpp.rs  cs.rs  go.rs  java.rs  kotlin.rs  mod.rs  node.rs  php.rs  python.rs  r.rs  ruby.rs  rust.rs  swift.rs
src/hook/: mod.rs  pun.rs
