[package]
name = "brust"
version = "0.1.0"
authors = ["Thomas Campistron <irevoire@hotmail.fr>"]
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serenity = { version = "0.10.2", features = ["collector"] }
select = "0.5.0"
kankyo = "0.3.0"
rand = { version = "0.8.0", features = ["small_rng"] }
reqwest = { version = "0.11.7", features = ["json"] }
serde_json = "1.0.73"
anyhow = "1.0.51"
