[package]
name = "brust"
version = "0.1.0"
authors = ["Thomas Campistron <irevoire@hotmail.fr>"]
edition = "2021"

[dependencies]
anyhow = "1.0.51"
dicey = { git = "https://github.com/irevoire/dicey" }
kankyo = "0.3.0"
miette = { version = "5.1.0", features = ["fancy"] }
rand = { version = "0.8.0", features = ["small_rng"] }
reqwest = { version = "0.11.7", features = ["rustls-tls", "json"], default-features = false }
select = "0.5.0"
serde_json = "1.0.73"
serenity = { version = "0.10.9", features = ["collector", "client", "gateway", "rustls_backend", "model", "unstable_discord_api"] }
tokio = { version = "1", features = ["full"] }
uwuify = "0.2.2"

[profile.release]
opt-level = "z"  # Optimize for size.
strip = true
lto = true
panic = "abort"
